--- a/index.html
+++ b/index.html
@@ -1,17 +1,17 @@
 <html>
-    <title>SUP3RN0VA</title>
+    <title>SRZ</title>
     <head>
         <link href="style.css" rel="stylesheet">
-        <h1 style="text-align:center">SUP3RN0VA's Website</h1>
+        <h1 style="text-align:center">SRZ's Website</h1>
     </head>
     <body>
         <ul>
-            <a href="https://www.youtube.com/c/SUPERNOVA0083" >My Channel!</a>
+            <a href="https://www.youtube.com/channel/UC6BeEqxUKXiw792eHnCI9Xg" >My Channel!</a>
 <br>
 <br>
 <br>
            
-            <a href="https://discord.com/invite/PMADc4FTNf">DISCORD</a>
+            <a href="https://discord.gg/FJvVRMpMk7">DISCORD</a>
             <br><br><br>
             <li>Thats it</li>
           </ul>
