--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     </head>
     <body>
         <ul>
-            <a href="https://www.youtube.com/channel/UC6BeEqxUKXiw792eHnCI9Xg" >My Channel!</a>
+            <a href="https://www.youtube.com/channel/UC22h4P80352KG7nBh-AFJcA" >My Channel!</a>
 <br>
 <br>
 <br>
            
-            <a href="https://discord.gg/FJvVRMpMk7">DISCORD</a>
+            <a href="https://discord.com/invite/PMADc4FTNf">DISCORD</a>
             <br><br><br>
             <li>Thats it</li>
           </ul>
