--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
     <title>SRZ</title>
     <head>
         <link href="style.css" rel="stylesheet">
-        <h1 style="text-align:center">SRZ's Website</h1>
+        <h1 style="text-align:center">SUP3RN0VA's Website</h1>
     </head>
     <body>
         <ul>
