--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
-    <title>SRZ</title>
+    <title>SN83</title>
     <head>
         <link href="style.css" rel="stylesheet">
         <h1 style="text-align:center">SUP3RN0VA's Website</h1>
